--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -419,7 +419,7 @@ jobs:
           command: |
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo "URL: ${URL}" 
+            echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
                 # Change this to 0 after the job fails
