--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -468,24 +468,41 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
+cleanup:
+    docker:
+      # Docker image here
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      # Install dependencies 
+      - run:
+          name: Install dependencies
+          command: |
+            yum install -y tar gzip
+      # Attach_workspace 
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Clean up
+          command: |
+            # Get Old workflow ID
+            cat ~/OldWorkflowID.txt
+            OldWorkflowID=$(cat ~/OldWorkflowID.txt)
+            echo OldWorkflowID: ${OldWorkflowID}
+            echo CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}
+            
+            if [[ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID:0:7}"]]
+            then
+              # your code here
+              echo "------------------ "Start cleaning up ---------------"
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              echo "------------------ Clean up finished ---------------"
+            else
+              echo "------------------ Unable to clean up ---------------"
+            fi
             
 
 workflows:
@@ -518,5 +535,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
