--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -486,13 +486,17 @@ jobs:
       - run:
           name: Clean up
           command: |
-            # Get Old workflow ID
-            cat ~/OldWorkflowID.txt
-            OldWorkflowID=$(cat ~/OldWorkflowID.txt)
-            echo OldWorkflowID: ${OldWorkflowID}
-            echo CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}
-            
-            if [[ "${OldWorkflowID}" != "${CIRCLE_WORKFLOW_ID:0:7}"]]
+            export OldWorkflowID=$(aws cloudformation list-exports \
+              --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            export STACKS=($(aws cloudformation list-stacks \
+              --query "StackSummaries[*].StackName" \
+              --stack-status-filter CREATE_COMPLETE \
+              --no-paginate --output text))
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "$CIRCLE_WORKFLOW_ID"
+            echo Stack names: "${STACKS[@]}"
+            if [[ ${STACKS[@]} != "${OldWorkflowID}" ]]
             then
               # your code here
               echo "------------------ "Start cleaning up ---------------"
